fix spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -11020,5 +11020,5 @@ section.resume-section .resume-section-content {
 }
 
 .bullet-point-list {
-  padding-left: 20px;
+  padding-left: 26px;
 }
